--- a/Fantom_LedgerJS/package.json
+++ b/Fantom_LedgerJS/package.json
@@ -19,34 +19,33 @@
   "author": "Jiri Malek <jirka.malek@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@ledgerhq/hw-transport": "^5.22.0",
+    "@ledgerhq/hw-transport": "^5.13.1",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
-    "ethereumjs-common": "^1.5.2",
+    "ethereumjs-common": "^1.5.0",
     "ethereumjs-tx": "^2.1.2",
-    "ethereumjs-util": "^7.0.4",
+    "ethereumjs-util": "^6.2.0",
     "node-int64": "^0.4.0",
-    "rlp": "^2.2.6",
+    "rlp": "^2.2.4",
     "u2f-api": "^1.1.1",
-    "web3": "^1.2.11",
-    "web3-utils": "^1.2.11"
+    "web3": "^1.2.9",
+    "web3-utils": "^1.2.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@ledgerhq/hw-transport-node-hid": "^5.22.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@ledgerhq/hw-transport-node-hid": "^5.13.1",
     "chai": "^4.2.0",
-    "mocha": "^8.1.3"
+    "mocha": "^7.1.2"
   },
   "scripts": {
     "clean": "bash ./tools/clean.sh",
-    "help": "babel --help",
-    "build": "babel src --out-dir lib --source-maps --verbose --delete-dir-on-start",
-    "build-example": "babel example/src --source-maps --out-dir example/lib",
-    "example": "npm run clean >/dev/null 2>&1 && npm run build && npm run build-example && node example/lib/example.js",
+    "build": "bash ./tools/build.sh",
+    "build-example": "babel --source-maps -d example/lib example/src",
+    "example": "npm run clean >/dev/null 2>&1 && npm run build > /dev/null 2>&1 && npm run build-example >/dev/null 2>&1 && node example/lib/example.js",
     "test": "npm run build && mocha"
   },
   "babel": {
