--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "@metamask/detect-provider": "^1.1.0",
         "@metamask/onboarding": "^1.0.0",
         "@unstoppabledomains/resolution": "^1.20.0",
+        "@walletconnect/client": "^1.6.6",
+        "@walletconnect/qrcode-modal": "^1.6.6",
+        "@walletconnect/web3-provider": "^1.6.6",
         "@yzfe/vue-svgicon-loader": "^1.0.0-alpha.0",
         "apollo-cache-inmemory": "^1.6.6",
         "apollo-client": "^2.6.8",
@@ -56,7 +59,7 @@
         "vuex": "^3.4.0",
         "vuex-persist": "^2.2.0",
         "walletlink": "^2.1.7",
-        "web3": "^1.2.11"
+        "web3": "^1.6.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.4.6",
