--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@metamask/detect-provider": "^1.1.0",
         "@metamask/onboarding": "^1.0.0",
         "@unstoppabledomains/resolution": "^1.20.0",
+        "@walletconnect/web3-provider": "^1.6.6",
         "@yzfe/vue-svgicon-loader": "^1.0.0-alpha.0",
         "apollo-cache-inmemory": "^1.6.6",
         "apollo-client": "^2.6.8",
