--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "copy-to-clipboard": "^3.3.1",
         "core-js": "^3.6.5",
         "dayjs": "^1.8.28",
+        "dexie": "^3.2.0",
         "eslint": "^6.8.0",
         "ethereumjs-util": "^7.0.3",
         "fantom-ledgerjs": "file:Fantom_LedgerJS",
