--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "serve:chrome-extension:app": "vue-cli-service serve --mode chrome-extension-development",
+        "serve.production": "vue-cli-service serve --mode production",
         "build": "vue-cli-service build",
         "build:chrome-extension": "npm run build:chrome-extension:app && npm run build:chrome-extension:background-js",
         "build:chrome-extension:app": "vue-cli-service build --mode chrome-extension-production && node chrome-extension/src/manifest.js",
