--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "fantom-pwa-wallet",
     "version": "0.1.0",
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "serve": "vue-cli-service serve --fix",
         "serve:chrome-extension:app": "vue-cli-service serve --mode chrome-extension-development",
         "serve.production": "vue-cli-service serve --mode production",
-        "build": "vue-cli-service build",
+        "build": "vue-cli-service build --fix",
         "build:chrome-extension": "npm run build:chrome-extension:app && npm run build:chrome-extension:background-js",
         "build:chrome-extension:app": "vue-cli-service build --mode chrome-extension-production && node chrome-extension/src/manifest.js",
         "build:chrome-extension:background-js": "vue-cli-service build --no-clean --mode chrome-extension-backgroundjs --formats umd,umd-min --skip-plugins html,pwa,apollo,i18n --target lib --name background chrome-extension/src/background.js",
@@ -35,6 +35,7 @@
         "dexie": "^3.2.0",
         "eslint": "^6.8.0",
         "ethereumjs-util": "^7.0.3",
+        "ethers": "^5.5.4",
         "fantom-ledgerjs": "file:Fantom_LedgerJS",
         "focus-visible": "^5.1.0",
         "graphql": "^14.6.0",
